--- a/app-manifest-exercise/public/index.html
+++ b/app-manifest-exercise/public/index.html
@@ -17,6 +17,10 @@
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="PWAGRAM">
   <link rel="apple-touch-icon" hrf="./src/images/icons/app-icon-144x144.png" sizes="144x144">
+  <!--IE-->
+  <meta name="msapplication-TitleImage" content="./src/images/icons/app-icon-144x144.png">
+  <meta name="msapplication-TitleColor" content="#fff">
+  <meta name="theme-color" content="#3f51b5">
 </head>
 <body>
 
